Moved files and updated code to match
Moved the PCB processing file to the right folder. Added the an example file. Then updated the code to match with the example file

--- a/Processing files/PCBs/Read PCBs OCPs waters files.ipynb
+++ b/Processing files/PCBs/Read PCBs OCPs waters files.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = '20240606 PCBOCP EN651 GFF PUF.txt'\n",
+    "file_path = 'Example files/20240606 PCBOCP EN651 GFF PUF.txt'\n",
     "n_smp = 100\n",
     "output_path = 'EN651 PCBOCP waters export.xlsx'\n",
     "export_figures = True"
@@ -172,13 +172,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "36cc2c32-729d-46f4-9c44-ce292fa69fcf",
+   "execution_count": null,
+   "id": "bef263ae-06b3-4f1a-9715-aae07d65f0d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_excel('EN651 PCBOCP waters export.xlsx',index=False)\n",
-    "natives.to_excel('EN651 PCBOCP natives only waters export.xlsx',index=False)"
+    "position = output_path.find('waters')\n",
+    "output_path_with_natives = output_path[:position] + 'natives ' + output_path[position:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "36cc2c32-729d-46f4-9c44-ce292fa69fcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdata\u001b[49m\u001b[38;5;241m.\u001b[39mto_excel(output_path,index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      2\u001b[0m natives\u001b[38;5;241m.\u001b[39mto_excel(output_path_with_natives,index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "data.to_excel(output_path,index=False)\n",
+    "natives.to_excel(output_path_with_natives,index=False)"
    ]
   },
   {
